Fixed more spacing

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
     right: -400px;
     width: 700px;
     float: right;
-    bottom: 587px;
+    bottom: 588px;
 }
 
 #third-container {
